[package]
name = "mb-rust-server"
version = "0.1.0"
edition = "2021"
authors = ["Bill Wood <wpwoodjr@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
actix-files = "*"
serde = { version = "*", features = ["derive"] }
rayon = "*"
