[package]
name = "mb-rust-server"
version = "0.1.0"
edition = "2021"
authors = ["Bill Wood <wpwoodjr@gmail.com>"]

[dependencies]
actix-web = "*"
actix-rt = "*"
actix-files = "*"
serde = { version = "*", features = ["derive"] }
rayon = "*"
num = "*"
mb-arith = { path = "../mb-arith" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
